lab_05/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app.kubernetes.io/name: gateway-service
spec:
  selector:
    app.kubernetes.io/name: gateway-service
    app.kubernetes.io/version: "v1.0"
  ports:
    - name: gateway-service
      protocol: TCP
      port: 5050
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway-service
      app.kubernetes.io/version: "v1.0"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway-service
        app.kubernetes.io/version: "v1.0"
    spec:
      containers:
        - name: gateway-service
          image: ilyasov9999/gateway-service:v1.4
          ports:
            - name: gateway-service
              containerPort: 80
              protocol: TCP
